sftp: Fix error code if ssh is not properly configured

G_IO_ERROR_PERMISSION_DENIED is returned if ssh is not properly configured.
Nautilus shows "Don't have permission to access the requested location" in
such case rather than "Connection refused by server", which is confusing.
G_IO_ERROR_CONNECTION_REFUSED should be returned instead.

https://bugzilla.gnome.org/show_bug.cgi?id=764049