daemon/gvfsbackendsftp.c
@@ -355,7 +355,7 @@ look_for_stderr_errors (Connection *conn, GError **error)
                strstr (line, "subsystem request failed") != NULL)
         {
           g_set_error_literal (error,
-	                       G_IO_ERROR, G_IO_ERROR_PERMISSION_DENIED,
+                               G_IO_ERROR, G_IO_ERROR_CONNECTION_REFUSED,
         	               _("Connection refused by server"));
           return;
         }
